--- a/style.css
+++ b/style.css
@@ -1,13 +1,22 @@
 * { margin: 0px; padding: 0px; }
 body {
 	font-size: 120%;
-	background: #F8F8FF;
 }
 .header {
 	width: 40%;
 	margin: 50px auto 0px;
 	color: white;
 	background: #5F9EA0;
+	text-align: center;
+	border: 1px solid #B0C4DE;
+	border-bottom: none;
+	border-radius: 10px 10px 0px 0px;
+	padding: 20px;
+}
+.header1 {
+	width: 80%;
+	margin: 50px auto 0px;
+	color: white;
 	text-align: center;
 	border: 1px solid #B0C4DE;
 	border-bottom: none;
