--- a/style.css
+++ b/style.css
@@ -74,6 +74,26 @@ form, .content {
 	border-radius: 5px; 
 	text-align: left;
 }
+.success1 {
+	width: 92%; 
+	margin: 0px auto; 
+	padding: 10px; 
+	border: 1px solid #3c763d; 
+	color: #3c763d; 
+	background: #f2dede; 
+	border-radius: 5px; 
+	text-align: left;
+}
+.error1 {
+	width: 92%; 
+	margin: 0px auto; 
+	padding: 10px; 
+	border: 1px solid #a94442; 
+	color: #a94442; 
+	background: #f2dede; 
+	border-radius: 5px; 
+	text-align: left;
+}
 .success {
 	color: #3c763d; 
 	background: #dff0d8; 
